# tauri-plugin-zb-android-notification

./: .gitignore  Cargo.toml  README.md  build.rs  bun.lockb  package.json
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/main/res/layout/: notification.xml  notification_large.xml
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: allow-send-notification.toml  sendNotification.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
