[package]
name = "tauri-plugin-zb-android-notification"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.71"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-zb-android-notification"

[dependencies]
tauri = { version = "2.0.0-rc.15" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-build = "2.0.0-rc.12"
tauri-plugin = { version = "2.0.0-rc.12", features = ["build"] }
